[gd_scene load_steps=4 format=3 uid="uid://dt3wxrbjcf3x2"]

[ext_resource type="Script" path="res://Scripts/Tests/PathFindingTest.gd" id="1_test"]
[ext_resource type="Script" path="res://Scripts/Boards/PathFindingManager.gd" id="2_manager"]
[ext_resource type="Script" path="res://Scripts/Boards/BoardData.gd" id="3_board"]

[node name="PathFindingTest" type="Node"]
script = ExtResource("1_test")

[node name="PathFindingManager" type="Node" parent="."]
script = ExtResource("2_manager")

[node name="BoardData" type="Node" parent="."]
script = ExtResource("3_board") 